--- a/styles/overnight.css
+++ b/styles/overnight.css
@@ -5,6 +5,16 @@
        /* Need to turn text Black for it though */
 }
 
+.backgroundCard
+{
+    background-color: rgb(241, 234, 242);
+}
+
+.img
+{
+    width: 335px;
+}
+
 .centerPosition
 {
     position: relative;
@@ -52,4 +62,27 @@
     text-align: center;
     font-weight: 300;
     font-size: 85%; 
+}
+
+.roomHeading
+{
+    font-weight: 100;
+}
+
+.roomName
+{
+    font-size: 120%;
+    font-weight: 300;
+}
+
+.form1
+{
+    text-align: center;
+    font-size: 20px;
+}
+
+.rightCol
+{
+    padding-top: 7.5rem;
+    padding-left: 2rem;
 }
